[gd_scene load_steps=24 format=2]

[ext_resource path="res://scenes/areas/Arena_tutorial.gd" type="Script" id=1]
[ext_resource path="res://font/Frostbite_64.tres" type="DynamicFont" id=2]
[ext_resource path="res://images/spritesheets/Arena.png" type="Texture" id=3]
[ext_resource path="res://scenes/enemies/Target_dummy.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/player/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/UI/Interface.tscn" type="PackedScene" id=6]
[ext_resource path="res://shaders/Flash_shader.gdshader" type="Shader" id=7]
[ext_resource path="res://scenes/UI/TransitionScreen.tscn" type="PackedScene" id=8]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 1280, 720 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 1280, 720 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 720, 1280, 720 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 1440, 1280, 720 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 3 ) ],
"loop": true,
"name": "cheering",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 835.054, 5 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 2, 360.123 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 10, 267.113 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 134.234, 10 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 10, 108.227 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 39.1988, 96.8545 )

[sub_resource type="ShaderMaterial" id=12]
resource_local_to_scene = true
shader = ExtResource( 7 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifier = 0.0

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 12.4323, 89.3658 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 640, 1 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 60.9033, 88.8693 )

[node name="Arena" type="Node"]
script = ExtResource( 1 )

[node name="Background" type="AnimatedSprite" parent="."]
position = Vector2( 640, 360 )
frames = SubResource( 5 )
animation = "idle"
__meta__ = {
"_edit_group_": true
}

[node name="Ground_and_walls" type="Node2D" parent="." groups=[
"walls",
]]
__meta__ = {
"_edit_group_": true
}

[node name="Ground" type="StaticBody2D" parent="Ground_and_walls"]
position = Vector2( 640, 720 )
__meta__ = {
"_edit_group_": true
}

[node name="shape" type="CollisionShape2D" parent="Ground_and_walls/Ground"]
shape = SubResource( 6 )

[node name="Right_wall" type="StaticBody2D" parent="Ground_and_walls"]
position = Vector2( 1280, 360 )
__meta__ = {
"_edit_group_": true
}

[node name="shape" type="CollisionShape2D" parent="Ground_and_walls/Right_wall"]
shape = SubResource( 7 )

[node name="Left_wall" type="StaticBody2D" parent="Ground_and_walls"]
position = Vector2( 0, 180 )
__meta__ = {
"_edit_group_": true
}

[node name="shape" type="CollisionShape2D" parent="Ground_and_walls/Left_wall"]
position = Vector2( -4.00452, 77.4207 )
shape = SubResource( 8 )

[node name="Entrance_roof" type="StaticBody2D" parent="Ground_and_walls"]
__meta__ = {
"_edit_group_": true
}

[node name="shape" type="CollisionShape2D" parent="Ground_and_walls/Entrance_roof"]
position = Vector2( -128.829, 513.388 )
shape = SubResource( 9 )

[node name="Entrance_wall" type="StaticBody2D" parent="Ground_and_walls"]

[node name="shape" type="CollisionShape2D" parent="Ground_and_walls/Entrance_wall"]
position = Vector2( -182.174, 615.259 )
shape = SubResource( 10 )

[node name="Entrance_door" type="StaticBody2D" parent="Ground_and_walls"]
collision_mask = 0

[node name="Door" type="CollisionShape2D" parent="Ground_and_walls/Entrance_door"]
position = Vector2( 0.430252, 620.295 )
shape = SubResource( 11 )

[node name="Player" parent="." instance=ExtResource( 5 )]
position = Vector2( -115.323, 626.602 )

[node name="Target_dummy" parent="." instance=ExtResource( 4 )]
material = SubResource( 12 )
position = Vector2( 824.264, 621.368 )

[node name="Interface" parent="." instance=ExtResource( 6 )]

[node name="Labels" type="Node" parent="."]

[node name="Enter_text" type="Label" parent="Labels"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.1
anchor_right = 0.5
anchor_bottom = 0.1
margin_left = -290.5
margin_right = 290.5
margin_bottom = 68.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 2 )
text = "Walk with A and D Keys"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fade_effect" type="Tween" parent="Labels/Enter_text"]

[node name="Jump_text" type="Label" parent="Labels"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.1
anchor_right = 0.5
anchor_bottom = 0.1
margin_left = -261.5
margin_right = 261.5
margin_bottom = 68.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 2 )
text = "PRESS SPACE TO JUMP"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fade_effect" type="Tween" parent="Labels/Jump_text"]

[node name="Attack_text" type="Label" parent="Labels"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.1
anchor_right = 0.5
anchor_bottom = 0.1
margin_left = -286.0
margin_right = 286.0
margin_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 2 )
text = "Attack with left click"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fade_effect" type="Tween" parent="Labels/Attack_text"]

[node name="Leave_text" type="Label" parent="Labels"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.15
anchor_right = 0.5
anchor_bottom = 0.15
margin_left = -357.0
margin_top = -7.62939e-06
margin_right = 358.0
margin_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 203, 0 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "LEAVE THE ARENA WHEN READY"
align = 1
valign = 1
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Effect_in" type="Tween" parent="Labels/Leave_text"]

[node name="Bounce_up" type="Tween" parent="Labels/Leave_text"]
repeat = true
playback/repeat = true

[node name="Start_fight" type="Area2D" parent="Labels"]
collision_layer = 0
collision_mask = 2

[node name="Start_collision" type="CollisionShape2D" parent="Labels/Start_fight"]
position = Vector2( 100.589, 624.177 )
shape = SubResource( 13 )
disabled = true
__meta__ = {
"_edit_group_": true
}

[node name="Jump_Box" type="Area2D" parent="Labels"]
position = Vector2( 640, 500 )
collision_layer = 0
collision_mask = 2

[node name="Jumpbox" type="CollisionShape2D" parent="Labels/Jump_Box"]
shape = SubResource( 14 )
disabled = true

[node name="Leave_arena" type="Area2D" parent="Labels"]
position = Vector2( -96.7361, 619.162 )
collision_layer = 0
collision_mask = 2
__meta__ = {
"_edit_group_": true
}

[node name="Leavebox" type="CollisionShape2D" parent="Labels/Leave_arena"]
shape = SubResource( 15 )
disabled = true

[node name="TransitionScreen" parent="." instance=ExtResource( 8 )]

[connection signal="tween_completed" from="Labels/Enter_text/Fade_effect" to="." method="_enter_fade_completed"]
[connection signal="tween_completed" from="Labels/Jump_text/Fade_effect" to="." method="_jump_fade_completed"]
[connection signal="tween_completed" from="Labels/Attack_text/Fade_effect" to="." method="_attack_fade_completed"]
[connection signal="tween_completed" from="Labels/Leave_text/Effect_in" to="." method="_on_Effect_in_tween_completed"]
[connection signal="tween_completed" from="Labels/Leave_text/Bounce_up" to="." method="_on_Bounce_up_tween_completed"]
[connection signal="body_entered" from="Labels/Start_fight" to="." method="_on_Start_fight_body_entered"]
[connection signal="body_entered" from="Labels/Jump_Box" to="." method="_on_Jump_Box_body_entered"]
[connection signal="body_entered" from="Labels/Leave_arena" to="." method="_on_Leave_arena_body_entered"]
[connection signal="transition_done" from="TransitionScreen" to="." method="_on_TransitionScreen_transition_done"]
